# clipcutter

./: .gitignore  CMakeLists.txt  README.md  premake5.lua
clipcutter/: CMakeLists.txt  premake5.lua
clipcutter/include/: app.h  dynArr.h  export.h  log.h  mediaClip.h  mediaSource.h  pch.h  playback.h  settings.h  ui.h  window.h
clipcutter/src/: app.cc  dynArr.cc  export.cc  log.cc  main.cc  mediaClip.cc  mediaSource.cc  playback.cc  settings.cc  ui.cc  window.cc
